--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -19,9 +19,8 @@
   height: 100%;
 }
 
-@media (max-width: 519px) {
-  .hero-flag {
-    width: 17px;
-    margin-bottom: 40px;
+@media (max-width: 640px) {
+  .App-sidebar {
+    display: none;
   }
 }
